client/static/css/common.css
/*
 * Root and body
 */

:root {
    --logo-gray: #646464;
    --logo-border: #2c2c2c;

    --czech-white: #ffffff;
    --czech-red: #d80c13;
    --czech-blue: #08437f;
}

body {
    margin: 0 0;
    padding: 0 0;
    overflow: auto scroll;
    background: #222222;
    color: white;
}

body,
input {
    /* System Fonts with system-ui */
    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

/*
 * Header and logo
 */

header {
    padding: 60px 0 50px 0;
    font-family: serif;
}

h1.header {
    margin: 0 0;
    padding: 0 0;
    text-align: center;
    color: var(--logo-gray);
    font-size: 40pt;
}

@media (max-width: 400px) {
    h1.header {
        font-size: 32px;
    }
}

.logo {
    display: inline-block;
    position: relative;
}

.logo .header-prezident {
    background: white;
    color: var(--logo-border);
    border: 1px var(--logo-border) solid;
    font-size: 55%;
    padding: 0.2em 0.5em;
    background: linear-gradient(to bottom, white, #dddddd);
    transform: rotate(-10deg);
    position: absolute;
    top: -1.3em;
    left: -1.5em;
}

.logo>.cz-start,
.logo>.cz-end {
    background: var(--logo-gray);
    color: white;
    padding: 0.17em;
    border: 1px var(--logo-border) solid;
    border-radius: 0.1em;
}

.logo>.oo {
    background: white;
    font-size: 80%;
    color: var(--logo-gray);
    padding: 0.05em;
    border: 1px var(--logo-border) solid;
    border-radius: 4px;
    box-shadow: -0.1em 0.1em 4px var(--logo-border);
}

.logo>.d {
    background: var(--czech-red);
    font-size: 110%;
    color: white;
    padding: 0.1em;
    border: 1px var(--logo-border) solid;
    border-radius: 4px;
    box-shadow: -0.1em 0.1em 4px var(--logo-border);
}

.logo>.le {
    background: var(--czech-blue);
    font-size: 60%;
    color: white;
    padding: 0.25em;
    border: 1px var(--logo-border) solid;
    border-radius: 4px;
    box-shadow: -0.1em 0.1em 4px var(--logo-border);
}

/*
 * Layout
 */

section.poll {
    margin: 3em 0 5em 0;
}

section h1 {
    font-size: 160%;
}

section h2 {
    font-size: 120%;
}

.wide,
.narrow {
    margin: 0 auto;
    padding: 0 0.5em;
    position: relative;
}

.wide {
    max-width: 600px;
}

.narrow {
    max-width: 450px;
}

@media (min-width: 600px) {

    .wide,
    .narrow {
        padding: 0 2em;
    }
}

/*
 * Common UI elements
 */

.color-separator {
    height: 5px;
    background: repeating-linear-gradient(to right, var(--czech-white), var(--czech-white) 5px, var(--czech-red) 5px, var(--czech-red) 10px, var(--czech-blue) 10px, var(--czech-blue) 15px, var(--czech-white) 15px);
    border-bottom: 1px var(--logo-border) solid;
}

.action-unset>svg {
    fill: inherit;
    stroke: inherit;
    stroke-width: inherit;
}

.action-unset {
    stroke: #626262;
    stroke-width: 1;
}

.action-unset.enabled {
    stroke: white;
}

@media (hover: hover) {
    .action-unset.enabled:hover {
        stroke: lightcoral;
        stroke-width: 3;
    }
}

.candidate {
    display: flex;
    width: 9em;
    flex: 0 0 auto;
}

.candidate-photo {
    width: 42px;
    height: 42px;
    border-radius: 21px;
    vertical-align: middle;
    margin: 0 0.5em 0 0;
}

.candidate-name {
    display: flex;
    color: white;
    vertical-align: middle;
    flex-direction: column;
    justify-content: center;
}

.candidate-first-name {
    display: block;
}

.candidate-surname {
    display: block;
    font-weight: bold;
}

.poll-heading {
    color: white;
}

.poll-info {
    color: white;
    line-height: 1.25;
}

.poll-title {
    display: flex;
    align-items: center;
    color: white;
}

.poll-title>h2 {
    flex: 1 1 auto;
}

.poll-title>button {
    flex: 0 0 auto;
}

.poll-row {
    padding: 0.5em 0;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    border-bottom: 1px #444 solid;
}

.poll-row:last-child {
    border-bottom: none;
}

.poll-buttons {
    display: flex;
    justify-content: space-evenly;
    margin: 3em 0;
}

.poll-buttons button {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0.5em 1em;
    font-size: inherit;
}

.poll-buttons button>div {
    position: relative;
    top: 0.1em;
}

.poll-buttons button.no-chrome {
    color: white;
    background: transparent;
    color: white;
    border-color: transparent;
}

.poll-buttons button>svg {
    margin: 0.5em 0.5em 0.5em 0;
}

/*
 * Star Poll
 */

.star-poll {
    margin: 1em 0;
}

.star-poll-value {
    position: relative;
    align-items: center;
    display: flex;
    flex: 1 1 150px;
    justify-content: right;
}

.star-poll-rank {
    display: flex;
}

.star-poll-star {
    fill: #626262;
    stroke-width: 1;
    stroke: gray;
    flex: 0 1 auto;
}

.star-poll-option>svg {
    fill: inherit;
    stroke: inherit;
    stroke-width: inherit;
}

.star-poll-star.enabled {
    fill: yellow;
    stroke: white;
}

@media (hover: hover) {
    .star-poll-rank:hover .star-poll-star {
        fill: white;
    }

    .star-poll-rank .star-poll-option:hover~.star-poll-star.enabled {
        fill: #8f8a43
    }

    .star-poll-rank .star-poll-option:hover~.star-poll-star.disabled {
        fill: #626262;
    }
}

.star-poll-edit {
    display: flex;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: -1;
    opacity: 0;
    padding-left: 0.5em;
    align-items: center;
}

.star-poll-input {
    width: 4em;
    font-size: 14pt;
}

.star-poll.custom .star-poll-edit {
    z-index: 1;
    opacity: 100;
}

.star-poll.custom .star-poll-rank {
    z-index: -1;
    opacity: 0;
}

.star-poll-percent-bar {
    margin: 0 0.5em;
    display: flex;
    align-items: center;
    height: 1.5em;
    flex: 1 1 100px;
    color: lightcoral;
}


/*
 * Order Poll
 */

.order-poll-row {
    display: flex;
    align-items: center;
    margin: 1em 0;
}

.order-poll-row-order {
    font-weight: bold;
    font-size: 150%;
    min-width: 2em;
    text-align: right;
    padding-right: 0.5em;
}

.order-poll-row-points {
    font-size: 90%;
    opacity: 0.9;
    padding: 0 0.5em;
    min-width: 3em;
    text-align: right;
}

.order-poll-row-order.unassigned,
.order-poll-row-points.unassigned {
    color: gray;
}

.order-poll-row-select {
    padding-left: 0.5em;
    flex: 1 1 auto;
}

.order-poll-row-select>select {
    font-size: 110%;
    width: 100%;
    padding: 0.25em;
}

.order-poll-row-unset.disabled>svg {
    stroke: gray;
}

.order-poll-row-photo-placeholder {
    width: 42;
    height: 42px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-right: 0.5em;
    flex: 0 0 auto;
}

.order-poll-row-photo-placeholder>svg {
    stroke: gray;
    stroke-width: 1;
}

/*
 * Doodle Poll
 */

.doodle-poll-info .doodle-poll-option-svg {
    stroke: #dddddd;
    fill: transparent;
    width: 1em;
    height: 1em;
    vertical-align: middle;
    position: relative;
    top: -0.1em;
}

.doodle-poll-info .doodle-poll-option-svg.yes {
    fill: #dddddd;
    stroke-width: 5;
}

.doodle-poll-info .doodle-poll-option-svg.no {
    stroke-width: 4;
    ;
}

.doodle-poll-info .doodle-poll-option-svg.if-needed {
    stroke-width: 5;
}

.doodle-poll-value {
    flex: 1 1 auto;
    text-align: right;
}

.doodle-poll input[type="radio"] {
    opacity: 0;
    width: 0;
}

.doodle-poll input[type="radio"]:focus-visible+.doodle-poll-option {
    outline-offset: 2px;
    outline: 2px white solid;
}

.doodle-poll-option {
    border: 1px rgb(110, 110, 110) solid;
    border-radius: 2px;
    padding: 1px;
    text-align: center;
    user-select: none;
    display: inline-block;
    margin: 0 0.5em;
}

.doodle-poll-option-svg {
    fill: inherit;
    stroke: inherit;
    stroke-width: inherit;
}

.doodle-poll-option.yes {
    fill: #999999;
    stroke: #999999;
    stroke-width: 3;
}

.doodle-poll input[type="radio"]:checked+.doodle-poll-option.yes {
    border-color: #48cd0e;
    fill: #48cd0e;
    stroke: #48cd0e;
    stroke-width: 3;
}

.doodle-poll-option.yes:hover,
.doodle-poll input[type="radio"]:checked+.doodle-poll-option.yes:hover {
    fill: #61e22a;
    stroke: #61e22a;
}

.doodle-poll-option.no {
    stroke: #999999;
    stroke-width: 4;
}

.doodle-poll input[type="radio"]:checked+.doodle-poll-option.no {
    border-color: red;
    fill: transparent;
    stroke: red;
}

.doodle-poll-option.no:hover,
.doodle-poll input[type="radio"]:checked+.doodle-poll-option.no:hover {
    stroke: #ff7b7b
}

.doodle-poll-option.if-needed {
    fill: transparent;
    stroke: #999999;
    stroke-width: 5;
}

.doodle-poll input[type="radio"]:checked+.doodle-poll-option.if-needed {
    border-color: #ffc800;
    stroke: #ffc800;
}

.doodle-poll-option.if-needed:hover,
.doodle-poll input[type="radio"]:checked+.doodle-poll-option.if-needed:hover {
    stroke: #ffde68;
}

.doodle-poll .poll-row .candidate-photo {
    outline-offset: 3px;
    margin-right: 0.7em;
}

.doodle-poll .poll-row.yes .candidate-photo {
    outline: 3px #61e22a solid;
}

.doodle-poll .poll-row.no .candidate-photo {
    opacity: 0.6;
}

.doodle-poll .poll-row.if-needed .candidate-photo {
    outline: 3px #ffc800 solid;
}

